# todo-api

./: .env.example  .gitignore  .gitlab-ci.yml  docker-compose.yml
.github/workflows/: ci.yml
app/: .dockerignore  Dockerfile  pyproject.toml  requirements-dev.txt  requirements.txt
app/src/: config.py  database.py  demo_uncovered.py  main.py
app/src/api/: dependencies.py
app/src/api/routes/: tasks.py
app/src/models/: task.py
app/src/repositories/: task_repository.py
app/src/services/: task_service.py
app/tests/: conftest.py
app/tests/integration/: test_api.py
app/tests/unit/: test_database.py  test_models.py  test_task_repository.py  test_task_service.py
db/: init.sql
